# qmps

./: .gitignore  README.md  Representations.ipynb  Time Evo.ipynb  copy_packages_from_slurm.sh  pyproject.toml  qmps.ipynb  qmps_installation_guide.md
data/20230328/: gen_rdn_fig.py
data/20230328/data/: energies_eye.txt  energies_eye_dt0.01.txt  energies_gd.txt  energies_rdn0.txt  energies_rdn1.txt  energies_rdn2.txt  energies_rdn3.txt  energies_rdn4.txt
experiments/: Experiments.ipynb
harui_playground/: time_evo.ipynb
new_tdvp/: TDVP New Rep.ipynb
qite/src/: qite_qiskit.py  qite_run_time_script.py  qite_run_time_script_fujitsu.py
qmps/: qiskit_qmps.py  represent.py  tools.py
qmps.egg-info/: PKG-INFO  SOURCES.txt
qmps/loschmidts/: gen_fig.py  plot_les.py  qite_qiskit.py  qite_run_time_script.py  time_evo.py  time_evo_qiskit.py  time_evo_qiskit_diff_meth.py  time_evo_qiskit_gd.py
qmps/loschmidts/real_dev_submit/20230711/src/: config.example.ini  qite_qiskit.py  qite_run_time_script.py  qite_run_time_script_fujitsu.py  run_submit.sh  temp_qite_qiskit.py  temp_qite_run_time_script.py
qmps/loschmidts/real_dev_submit/src/: para_set.txt  temp_qite_qiskit.py
