[tool.poetry]
name = "qmps-for-fujitsu"
version = "0.0.1"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.9.17"
qiskit = ">= 0.37.2"
qiskit-ibm-runtime = ">= 0.9.3"
cirq = "^1.2.0"
ncon = "^2.0.0"
xmps = { git = "https://github.com/fergusbarratt/xmps.git", branch = "master" }
mpi4py = { version = "^3.1.4", optional = true, source = "fujitsu" }
qiskit-qulacs = {version = "^1.2.1rc1", optional = true, python = "<3.12", source = "fujitsu"}
mpiqulacs = {version = "^1.3.1", optional = true, source = "fujitsu"}


[tool.poetry.extras]
fujitsu-slurm = ["mpi4py", "mpiqulacs", "qiskit-qulacs"]


[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[[tool.poetry.source]]
name = "fujitsu"
url = "http://simulator-pypi:8181"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
